Фикс получения аудиторий
